--- a/CourseManagement/pom.xml
+++ b/CourseManagement/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>project.demo</groupId>
-    <artifactId>WarehouseManagement</artifactId>
+    <artifactId>CourseManagement</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>WarehouseManagement</name>
     <packaging>war</packaging>
