--- a/CourseManagement/src/main/webapp/WEB-INF/web.xml
+++ b/CourseManagement/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
+
     <welcome-file-list>
         <welcome-file>home.jsp</welcome-file>
     </welcome-file-list>
@@ -11,7 +12,11 @@
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
-    
+
+    <servlet-mapping>
+        <servlet-name>CourseViewServlet</servlet-name>
+        <url-pattern>/course</url-pattern>
+    </servlet-mapping>
     
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
@@ -28,5 +33,11 @@
         <servlet-name>HomeServlet</servlet-name>
         <servlet-class>project.demo.coursemanagement.controllers.HomeServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>CourseViewServlet</servlet-name>
+        <servlet-class>project.demo.coursemanagement.controllers.CourseViewServlet</servlet-class>
+        <load-on-startup>3</load-on-startup>
     </servlet>
 </web-app>
