--- a/CourseManagement/pom.xml
+++ b/CourseManagement/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+        </dependency>
 
         <dependency>
             <groupId>jakarta.security.enterprise</groupId>
