--- a/CourseManagement/src/main/webapp/WEB-INF/web.xml
+++ b/CourseManagement/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,9 @@
          version="6.0">
 
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
 
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
@@ -23,22 +24,29 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>ProfileServlet</servlet-name>
+        <url-pattern>/profile</url-pattern>
+    </servlet-mapping>
+
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>project.demo.coursemanagement.controllers.LoginServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
     </servlet>
 
     <servlet>
         <servlet-name>HomeServlet</servlet-name>
         <servlet-class>project.demo.coursemanagement.controllers.HomeServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet>
         <servlet-name>CourseViewServlet</servlet-name>
         <servlet-class>project.demo.coursemanagement.controllers.CourseViewServlet</servlet-class>
-        <load-on-startup>3</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>ProfileServlet</servlet-name>
+        <servlet-class>project.demo.coursemanagement.controllers.ProfileServlet</servlet-class>
     </servlet>
 
 </web-app>
