--- a/CourseManagement/src/main/webapp/WEB-INF/web.xml
+++ b/CourseManagement/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!-- ProfileServlet uses @WebServlet annotation, so no mapping needed here -->
 
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
@@ -22,11 +23,6 @@
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet-mapping>
-        <servlet-name>ProfileServlet</servlet-name>
-        <url-pattern>/profile</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -44,9 +40,6 @@
         <servlet-class>project.demo.coursemanagement.controllers.CourseViewServlet</servlet-class>
     </servlet>
 
-    <servlet>
-        <servlet-name>ProfileServlet</servlet-name>
-        <servlet-class>project.demo.coursemanagement.controllers.ProfileServlet</servlet-class>
-    </servlet>
+    <!-- ProfileServlet declaration not needed due to @WebServlet annotation -->
 
 </web-app>
